x/programs/sdk-macros/tests/ui/fail/receiver.stderr
error: The first paramter of a function with the `#[public]` attribute must be of type `&mut wasmlanche::Context`
  --> tests/ui/fail/receiver.rs:10:17
   |
10 |     pub fn test(&self) {}
   |                 ^
